v0.8.0-alpha
1.add the cmd result data length protection, the max data(stderr + stdout) is 128MB
2.add the cmd.smallFileReceive function

v0.7.0-alpha
1.add the daemon, background run schema, and updater
2.optimize log
3.add connection auth support
4.add log cutter when use daemon schema process running and so on

0.5.0-alpha
1.调整日志方式和级别控制
2.增加updater版本服务

0.3.0-alpha
1.区分日志级别，优化日志信息歧义显示
2.优化http代理错误信息返回
3.增加命令默认超时时间到1分钟

0.2.3-alpha
1.支持gzip压缩内容

0.2.1-alpha
1.关闭代理返回的请求结果时，判断是否有空指针异常（超时时出现）

0.2.0-alpha
1.http代理指令 proxy.http

0.1.0
1.go语言 websocket 客户端，及基本框架及协议,及安全通信定义
2.系统调用基础命令 cmd.run